Ongoing changes to swagger yaml
