# services/daemons/uniserve-flask/swagger/swagger.yaml
@@ -9,68 +9,61 @@ host: "192.168.1.88:8080"
 schemes:
 - "http"
 paths:
-  /ddot:
+  /all_pixels:
+    get:
+      tags:
+      - "default_controller"
+      operationId: "controllers.default_controller.all_pixels_get"
+      parameters: []
+      responses:
+        200:
+          description: "2d colour array of all pixels"
+          schema:
+            $ref: "#/definitions/pixelmap"
+  /dot/{x}:
     put:
       tags:
       - "default_controller"
       description: "Paint a single pixel"
-      operationId: "controllers.default_controller.ddot_put"
+      operationId: "controllers.default_controller.dot_x_put"
       parameters:
-      - name: "red"
-        in: "query"
-        description: "Red component of pixel"
-        required: false
-        type: "number"
-        format: "integer"
-      - name: "green"
-        in: "query"
-        description: "Green component of pixel"
-        required: false
-        type: "number"
-        format: "integer"
-      - name: "blue"
-        in: "query"
-        description: "Blue component of pixel"
-        required: false
-        type: "number"
-        format: "integer"
+      - in: "body"
+        name: "colour"
+        required: true
+        schema:
+          $ref: "#/definitions/colour"
       - name: "x"
-        in: "query"
+        in: "path"
         description: "x component of pixel"
-        required: false
+        required: true
         type: "number"
         format: "integer"
       - name: "y"
         in: "query"
         description: "y component of pixel"
-        required: false
+        required: true
         type: "number"
         format: "integer"
       responses:
         200:
           description: "Success"
-  /dot:
-    put:
-      tags:
-      - "default_controller"
-      description: "paint pixel"
-      operationId: "controllers.default_controller.dot_put"
-      parameters:
-      - name: "stdin"
-        in: "query"
-        description: "string to paint"
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "Success"
-  /monoframe:
+  /monoframe/{pixelmap}:
     put:
       tags:
       - "default_controller"
       description: "Shows single frame"
-      operationId: "controllers.default_controller.monoframe_put"
-      parameters: []
+      operationId: "controllers.default_controller.monoframe_pixelmap_put"
+      parameters:
+      - name: "pixelmap"
+        in: "path"
+        description: "map of pixel"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "colour"
+        required: true
+        schema:
+          $ref: "#/definitions/colour"
       responses:
         200:
           description: "Success"
@@ -80,7 +73,23 @@ paths:
       - "default_controller"
       description: "Sets single line"
       operationId: "controllers.default_controller.monoline_put"
-      parameters: []
+      parameters:
+      - name: "line"
+        in: "query"
+        description: "location of line"
+        required: false
+        type: "number"
+        format: "integer"
+      - name: "pixelmap"
+        in: "query"
+        description: "bitmap of pixels to show"
+        required: false
+        type: "string"
+      - in: "body"
+        name: "colour"
+        required: true
+        schema:
+          $ref: "#/definitions/colour"
       responses:
         200:
           description: "Success"
@@ -94,4 +103,25 @@ paths:
       responses:
         200:
           description: "Success"
-definitions: {}
+definitions:
+  colour:
+    type: "object"
+    properties:
+      red:
+        type: "integer"
+        minimum: 0
+        maximum: 255
+      green:
+        type: "integer"
+        minimum: 0
+        maximum: 255
+      blue:
+        type: "integer"
+        minimum: 0
+        maximum: 255
+  pixelmap:
+    type: "array"
+    items:
+      type: "array"
+      items:
+        $ref: "#/definitions/colour"
